--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.4.1
   firebase_auth: ^4.6.1
+  dropdown_button2: ^2.1.3
+#  firebase_storage: ^11.2.0
 
 
 
