--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,13 @@ environment:
 dependencies:
   cloud_firestore: ^4.7.1
   modal_progress_hud_nsn: ^0.4.0
+  firebase_storage: ^11.2.0
+  image_picker: ^0.8.4+4
+  flutter_form_builder: ^9.0.0
   provider: ^6.0.5
   flutter:
     sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
