--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
   cloud_firestore: ^4.7.1
   modal_progress_hud_nsn: ^0.4.0
   firebase_storage: ^11.2.0
-  image_picker: ^0.8.4+4
   flutter_form_builder: ^9.0.0
   provider: ^6.0.5
   flutter:
@@ -46,7 +45,8 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_auth: ^4.6.1
   dropdown_button2: ^2.1.3
-#  firebase_storage: ^11.2.0
+  file_picker: ^5.3.2
+  image_picker: ^0.8.7+5
 
 
 
